home/i18n/zh-cn/docusaurus-plugin-content-docs/version-1.6.x/help/alert_threshold.md
---
id: alert_threshold
title: 告警阈值规则配置
sidebar_label: 阈值规则
---

:::tip
告警阈值规则是 `HertzBeat` 的核心功能，用户可以通过阈值规则来配置告警的触发条件。
阈值规则支持实时阈值和计划阈值，实时阈值可以在监控数据采集时直接触发告警，计划阈值支持 PromQL 等表达式在指定时间段内计算触发告警。
支持可视化页面配置或更高灵活性的表达式规则配置，支持配置触发次数，告警级别，通知模板，关联指定监控等。
:::

![threshold](/img/docs/help/alert-threshold-1.png)

## 实时阈值

> 实时阈值是指在监控数据采集时直接触发告警，适用于对实时性要求较高的场景。

### 创建实时阈值规则

    > 系统页面 -> 告警 -> 告警阈值 -> 新增阈值 -> 新增实时阈值规则

配置阈值，例如: 选择SSL证书指标对象，配置告警表达式-当指标`expired`为`true`触发，即`equals(expired,"true")` , 设置告警级别通知模板信息等。

![HertzBeat](home/static/img/docs/start/ssl_5.png)

配置项说明：

- **阈值名称**：定义此阈值规则的唯一名称
- **指标对象**：选择我们需要配置阈值的监控指标对象 例如：网站监控类型下的 -> 响应时间指标
- **阈值规则**：配置具体指标的告警触发规则，支持图形界面和表达式规则，表达式环境变量和操作符见页面提示。阈值表达式详细帮助见 [阈值表达式帮助](alert_threshold_expr)
- **关联监控**：应用此阈值规则到指定的监控对象(支持直接绑定和标签关联)，若未配置，则应用到所有符合此阈值类型规则的监控对象上。
- **告警级别**：触发阈值的告警级别,从低到高依次为:警告-warning，严重-critical，紧急-emergency
- **触发次数**：设置触发阈值多少次之后才会真正的触发告警
- **通知模板**：告警触发后发送的通知信息模板,模板环境变量见页面提示，例如：`__instancename__` `__metric__` 指标的值为 `responseTime`，大于 50 触发告警`
- **附加标签**：给此阈值规则附加标签，当产生告警时，此标签也会附加到告警上。
- **附加声明**：给此阈值规则附加声明信息(声明内容支持环境变量)，当产生告警时，此声明信息会被渲染并附加到告警上。
- **启用告警**：此告警阈值配置开启生效或关闭

**阈值告警配置完毕，已经被成功触发的告警信息可以在【告警中心】看到。**
**若需要将告警信息邮件，微信，钉钉飞书通知给相关人员，可以在【消息通知】配置。**

## 计划阈值
